--- a/assets/myStyle.css
+++ b/assets/myStyle.css
@@ -140,18 +140,18 @@ backdrop-filter:blur(1.6px);
     min-height: 150vh;
     margin-top: -6rem;
     padding-top: 16rem;
-    padding-bottom: 3rem;
+    padding-bottom: 5rem;
 }
 
 .bismillah{
     background-image: url(images/bismillah.png); 
 }
 
-.couple {
+.couple .spouse {
     margin-top: 100px;
 }
 
-.couple h3{
+.couple .spouse h3{
     font-family: 'Sacramento';
     font-size: 2.4rem;
     color: var (--sage);
