--- a/assets/myStyle.css
+++ b/assets/myStyle.css
@@ -1,5 +1,6 @@
 :root{
     --sage:#9CAF88;
+    --pink: #fb16cd;
     --bg: #0a0a0a;
     --shadow: 0 2px 2px rgba(0,0,0,0.5);
     /* --shadow: 0 2px 2px rgb(0 0 0 / 0.5); */
@@ -131,6 +132,7 @@ backdrop-filter:blur(1.6px);
     font-size: 6rem;
     padding-top: 2rem;
     padding-bottom: 1.4rem;
+    color: var(--sage);
 }
 
 .couple{
@@ -139,7 +141,7 @@ backdrop-filter:blur(1.6px);
     background-position:center;
     min-height: 150vh;
     margin-top: -6rem;
-    padding-top: 16rem;
+    padding-top: 8rem;
     padding-bottom: 5rem;
 }
 
@@ -148,15 +150,38 @@ backdrop-filter:blur(1.6px);
 }
 
 .couple .spouse {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .couple .spouse h3{
     font-family: 'Sacramento';
-    font-size: 2.4rem;
-    color: var (--sage);
+    font-size: 2.6rem;
+    color: var(--sage);
 }
 
+.couple .spouse img {
+    width: 100%;
+}
+
+.couple .heart {
+    width: 60px;
+    height: 60px;
+    /* background-color: red; */
+    display: flex;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(100%);
+}
+
+.couple .heart i{
+    margin: auto;
+}
+
+.couple .heart i:hover{
+    color: var(--pink);
+   
+}
 
 
 
