--- a/assets/myStyle.css
+++ b/assets/myStyle.css
@@ -1,12 +1,12 @@
-:root{
-    --sage:#9CAF88;
+:root {
+    --sage: #9CAF88;
     --pink: #fb16cd;
     --bg: #0a0a0a;
-    --shadow: 0 2px 2px rgba(0,0,0,0.5);
+    --shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
     /* --shadow: 0 2px 2px rgb(0 0 0 / 0.5); */
 }
 
-body{
+body {
     font-size: 1.3rem;
     font-family: 'Work Sans', sans-serif;
 
@@ -15,7 +15,7 @@ body{
 
 .hero::before {
     content: '';
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -27,43 +27,47 @@ body{
     filter: grayscale(92%);
 }
 
-.hero{
+.hero {
     position: relative;
     min-height: 100vh;
     /* overflow-x: scroll;
     overflow-y: hidden; */
 }
 
-.hero h1, .hero h2, .hero h3, .hero h4, .hero p{
+.hero h1,
+.hero h2,
+.hero h3,
+.hero h4,
+.hero p {
     text-shadow: var(--shadow);
 
 }
 
-.hero h1{
+.hero h1 {
     font-family: 'Sacramento', cursive;
     font-size: 6rem;
 }
 
-.hero h2{
+.hero h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
 }
 
-.hero h3{
+.hero h3 {
     font-size: 1.6rem;
 }
 
-.hero h4{
+.hero h4 {
     font-size: 1.4rem;
 }
 
-.hero p{
+.hero p {
     font-size: 1.3rem;
 
 }
 
 
-.hero a{
+.hero a {
     /* margin-top:1rem;
     margin-bottom: 3rem; */
     color: var(--sage);
@@ -90,22 +94,22 @@ body{
     margin: 0 auto;
     height: auto;
     width: 100%;
-    filter:grayscale(30%)
+    filter: grayscale(30%)
 }
 
 /* Navbar */
 
-.mynavbar{
-background-color: rgba(255,255, 255, 0.3)!important;
-backdrop-filter:blur(1.6px);
-/* margin-top: -1rem; */
+.mynavbar {
+    background-color: rgba(255, 255, 255, 0.3) !important;
+    backdrop-filter: blur(1.6px);
+    /* margin-top: -1rem; */
 }
 
-.mynavbar .offcanvas{
+.mynavbar .offcanvas {
     height: 100vh;
 }
 
-.mynavbar .navbar-brand, 
+.mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
 
     font-family: 'Sacramento', cursive;
@@ -117,10 +121,10 @@ backdrop-filter:blur(1.6px);
     text-transform: uppercase;
 }
 
-.home{
+.home {
     background-image: url(images/floral.png);
     background-size: cover;
-    background-position:center;
+    background-position: center;
     min-height: 150vh;
     margin-top: -6rem;
     padding-top: 16rem;
@@ -130,7 +134,7 @@ backdrop-filter:blur(1.6px);
     height: auto; */
 }
 
-.home h1{
+.home h1 {
     font-family: 'Sacramento', cursive;
     font-size: 6rem;
     padding-top: 2rem;
@@ -138,10 +142,10 @@ backdrop-filter:blur(1.6px);
     color: var(--sage);
 }
 
-.couple{
+.couple {
     background-image: url(images/floral2.png);
     background-size: cover;
-    background-position:center;
+    background-position: center;
     min-height: 150vh;
     height: 100%;
     padding-top: 8rem;
@@ -149,20 +153,19 @@ backdrop-filter:blur(1.6px);
     /* margin-top: -6rem; */
 }
 
-.bismillah{
-    background-image: url(images/bismillah.png); 
+.bismillah {
+    background-image: url(images/bismillah.png);
 }
 
 .couple .spouse {
     margin-top: 50px;
 }
 
-.couple .spouse h3
-{
+.couple .spouse h3 {
     font-family: 'Sacramento', cursive;
     font-size: 2.6rem;
     color: var(--sage);
-    
+
 }
 
 .couple .spouse img {
@@ -180,142 +183,137 @@ backdrop-filter:blur(1.6px);
 }
 
 .couple .heart i,
-.event .icon i{
+.event .icon i {
     margin: auto;
     color: var(--sage);
 }
 
 .couple .heart i:hover,
-.event .icon i:hover{
-    color: var(--pink);   
+.event .icon i:hover {
+    color: var(--pink);
 }
 
 
 .event {
     background-image: url(./images/floral.png);
     background-size: cover;
-    background-position:center;
+    background-position: center;
     min-height: 150vh;
     height: 100%;
     padding-top: 8rem;
     padding-bottom: 5rem;
-   
+
 }
 
-.event a{
+.event a {
     /* margin-top:1rem;
     margin-bottom: 3rem; */
     color: var(--sage);
     font-size: 1.6rem;
-    background-color:transparent;
+    background-color: transparent;
 }
 
-.event a:hover{
+.event a:hover {
     color: white;
     background-color: var(--sage);
 }
 
 .event h1,
-.gallery h1
-{
+.gallery h1 {
     font-family: 'Sacramento', cursive;
     font-size: 5rem;
     color: var(--sage);
     /* font-weight: bold; */
 }
 
-.event h2, 
-.gallery h2
-{
+.event h2,
+.gallery h2 {
     font-size: 3rem;
     padding-bottom: 1.2rem;
     font-weight: 600;
 }
 
-.event h3
-{
+.event h3 {
     font-size: 2rem;
     padding-bottom: 2.3rem;
     font-weight: 400;
 }
 
-.event p
-{
+.event p {
     font-size: 1.5rem;
     padding-bottom: 1.3rem;
     padding-top: 2rem;
     font-weight: 300;
 }
 
-.event .alamat p{
+.event .alamat p {
     font-size: 1.4rem;
 }
 
-.event .card{
+.event .card {
     /* background-color: rgba(255, 255, 255, 0.2) !important; */
     background-color: transparent !important;
     border: 1.6px solid var(--sage);
 }
 
-.event .card-header{
+.event .card-header {
     /* background-color: rgba(255, 255, 255, 0.2) !important; */
     background-color: transparent !important;
-    border-bottom:none ;
+    border-bottom: none;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     font-weight: 500;
 }
 
-.event .card-body{
+.event .card-body {
     font-size: 1.3rem;
     font-weight: 400;
 }
 
-.event .simply-countdown>.simply-section :hover{
+.event .simply-countdown>.simply-section :hover {
     color: white;
 }
 
 .gallery {
     background-image: url(./images/floral2.png);
     background-size: cover;
-    background-position:center;
+    background-position: center;
     min-height: 150vh;
     height: 100%;
     padding-top: 8rem;
     padding-bottom: 5rem;
-   
+
 }
 
 .gift {
     background-image: url(./images/floral.png);
     background-size: cover;
-    background-position:center;
+    background-position: center;
     min-height: 150vh;
     height: 100%;
     padding-top: 15rem;
     padding-bottom: 10rem;
-   
+
 }
 
-.gift h1{
+.gift h1 {
     font-family: 'Sacramento', cursive;
     font-size: 5rem;
     color: var(--sage);
     padding-bottom: 2rem;
 }
 
-.gift h2{
+.gift h2 {
     font-size: 1rem;
     font-weight: 400;
 }
 
-.gift p
-{
+.gift p {
     font-size: 1.5rem;
     font-weight: 300;
 }
 
-.gift .card{
+.gift .card {
     background-color: rgb(255, 255, 255) !important;
     /* background-color: transparent !important; */
     border: 1px solid var(--sage);
@@ -325,17 +323,17 @@ backdrop-filter:blur(1.6px);
 }
 
 
-.gift .card-body{
+.gift .card-body {
     font-size: 1.3rem;
     font-weight: 400;
 }
 
-.rsvp{
+.rsvp {
     padding-top: 8rem;
     /* padding-bottom: 10rem; */
 }
 
-.rsvp .card-body{
+.rsvp .card-body {
     /* margin-top: 10rem; */
     background-color: rgb(255, 255, 255) !important;
     border: 1px solid var(--sage);
@@ -343,6 +341,40 @@ backdrop-filter:blur(1.6px);
     box-shadow: var(--shadow);
 }
 
+.rsvp button {
+    background-color: var(--sage);
+    color: white;
+    border: 1px solid var(--sage);
+    margin-top: 23px;
+}
+
+.rsvp button:hover {
+    background-color: white;
+    color: var(--sage);
+    border: 1px solid var(--sage);
+}
+
+footer {
+    padding: 3rem;
+    background-color: var(--sage);
+    color: white;
+}
+
+footer a {
+    color: var(--bg);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: white;
+}
+
+footer li {
+    list-style: none;
+    display: inline;
+    margin: 0.2rem;
+}
 
 
 
@@ -353,20 +385,20 @@ backdrop-filter:blur(1.6px);
 /* Media Query */
 
 /* Extra Large */
-@media(max-width: 1200px){
+@media(max-width: 1200px) {
     .couple .heart {
         transform: translateX(-50%) translateY(45px);
     }
 
     .event .simply-countdown>.simply-section {
-        padding: 50px; 
+        padding: 50px;
     }
 
 }
 
 /* Laptop */
-@media(max-width: 992px){
-    
+@media(max-width: 992px) {
+
     html {
         font-size: 75%;
     }
@@ -376,13 +408,13 @@ backdrop-filter:blur(1.6px);
     }
 
     .event .simply-countdown>.simply-section {
-        padding: 47px; 
+        padding: 47px;
     }
 
 }
 
 /* Tablet */
-@media(max-width: 768px){
+@media(max-width: 768px) {
 
     html {
         font-size: 65%;
@@ -398,34 +430,34 @@ backdrop-filter:blur(1.6px);
         margin: 3px;
     }
 
-    .sticky-top{
+    .sticky-top {
         overflow: hidden;
     }
 
 }
 
 /* Mobile Phone */
-@media(max-width: 576px){
+@media(max-width: 576px) {
 
     html {
         font-size: 60%;
     }
 
-    .home h2{
+    .home h2 {
         /* text-shadow: var(--shadow); */
-    
+
     }
 
     .event .simply-countdown>.simply-section {
         padding: 36px;
         margin: 1.2px;
     }
- 
+
 }
 
-@media(max-width: 435px){
+@media(max-width: 435px) {
 
-    .hero h1{
+    .hero h1 {
         font-size: 4.5rem;
     }
 
@@ -433,5 +465,5 @@ backdrop-filter:blur(1.6px);
         padding: 30px;
         margin: 1px;
     }
-  
+
 }
